--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <spring-boot.version>2.1.7.RELEASE</spring-boot.version>
     <reactor.version>3.2.11.RELEASE</reactor.version>
     <lombok.version>1.18.8</lombok.version>
+    <jackson-databind.version>[2.9.9.2,)</jackson-databind.version>
   </properties>
 
   <dependencies>
@@ -31,7 +32,7 @@
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.9.4</version>
+      <version>${jackson-databind.version}</version>
     </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
